--- a/.github/workflows/deployAWS.yml
+++ b/.github/workflows/deployAWS.yml
@@ -5,6 +5,8 @@ env:
   tf_version: '1.5.7'
   tg_version: '0.53.2'
   working_dir: 'prod'
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   
 jobs:
   login:
@@ -14,7 +16,7 @@ jobs:
         uses: actions/checkout@v3
       
       - name: AWS Login
-        run: aws configure set aws_access_key_id {{ secrets.AWS_ACCESS_KEY }} && aws configure set aws_secret_access_key {{ secrets.AWS_SECRET_KEY }} && aws configure set default.region eu-west-1
+        run: aws configure set aws_access_key_id ${AWS_ACCESS_KEY_ID} && aws configure set aws_secret_access_key ${AWS_SECRET_ACCESS_KEY} && aws configure set default.region eu-west-1
       - name: 'Checkout'
         uses: actions/checkout@main
   checks:
