--- a/.github/workflows/deployAWS.yml
+++ b/.github/workflows/deployAWS.yml
@@ -16,7 +16,11 @@ jobs:
         uses: actions/checkout@v3
       
       - name: AWS Login
-        run: aws configure set aws_access_key_id ${AWS_ACCESS_KEY_ID} && aws configure set aws_secret_access_key ${AWS_SECRET_ACCESS_KEY} && aws configure set default.region eu-west-1
+        run: |
+          aws configure set aws_access_key_id ${AWS_ACCESS_KEY_ID} 
+          aws configure set aws_secret_access_key ${AWS_SECRET_ACCESS_KEY}
+          aws configure set default.region eu-west-1
+          
       - name: 'Checkout'
         uses: actions/checkout@main
   checks:
