--- a/.github/workflows/deployAWS.yml
+++ b/.github/workflows/deployAWS.yml
@@ -17,8 +17,8 @@ jobs:
       
       - name: AWS Login
         run: |
-          aws configure set aws_access_key_id ${AWS_ACCESS_KEY_ID} 
-          aws configure set aws_secret_access_key ${AWS_SECRET_ACCESS_KEY}
+          aws configure set aws_access_key_id ${{ env.AWS_ACCESS_KEY_ID }} 
+          aws configure set aws_secret_access_key ${{ env.AWS_SECRET_ACCESS_KEY }}
           aws configure set default.region eu-west-1
           
       - name: 'Checkout'
