--- a/.github/workflows/deployAWS.yml
+++ b/.github/workflows/deployAWS.yml
@@ -17,14 +17,15 @@ jobs:
       
       - name: AWS Login
         run: |
-          aws configure set aws_access_key_id ${{ env.AWS_ACCESS_KEY_ID }} 
-          aws configure set aws_secret_access_key ${{ env.AWS_SECRET_ACCESS_KEY }}
           aws configure set default.region eu-west-1
+          aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           
       - name: 'Checkout'
         uses: actions/checkout@main
   checks:
      runs-on: ubuntu-latest
+     needs: [ login ]
      steps:
       - name: Check terragrunt HCL
         uses: gruntwork-io/terragrunt-action@v2
