--- a/.github/workflows/deployAWS.yml
+++ b/.github/workflows/deployAWS.yml
@@ -17,9 +17,9 @@ jobs:
       
       - name: AWS Login
         run: |
-          aws configure set default.region eu-west-1
-          aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws configure set default.region eu-west-1 --profile default
+          aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }} --profile default
+          aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }} --profile default
           
       - name: 'Checkout'
         uses: actions/checkout@main
