--- a/.github/workflows/deployAWS.yml
+++ b/.github/workflows/deployAWS.yml
@@ -18,6 +18,10 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-west-1
+      - name: Debugging Output
+        run: |
+          cat $HOME/.aws/config
+          cat $HOME/.aws/credentials
           
       - name: 'Checkout'
         uses: actions/checkout@main
