--- a/.github/workflows/download_file.yaml
+++ b/.github/workflows/download_file.yaml
@@ -19,5 +19,5 @@ jobs:
         run: |
           python3 testing_terrgr_ver.py
         env:
-          S3_BUCKET_NAME: ${{ env.S3_BUCKET_NAME }}
-          CLOUDFRONT_URL: ${{ env.CLOUDFRONT_URL }}
+          S3_BUCKET_NAME: ${{ env.S3_BUCKET_NAME_FROM_GIT }}
+          CLOUDFRONT_URL: ${{ env.CLOUDFRONT_URL_FROM_GIT }}
