--- a/.github/workflows/download_file.yaml
+++ b/.github/workflows/download_file.yaml
@@ -1,31 +1,16 @@
 name: Download the file from CloudFront
 
-on:
-  workflow_run:
-    workflows: 
-      - deployAWS
-    types: 
-      - completed
-
 jobs:
   run_python_script:
     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-        with:
-          working-directory: ./
+      steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Run Python Script
-      - uses: actions/setup-python@v2
-        with:
-          python-version: 3
-      - name: install
         run: |
-          pip install boto3 requests json os
+          python3 testing_terrgr_ver.py
         env:
           S3_BUCKET_NAME: ${{ env.S3_BUCKET_NAME_FROM_GIT }}
           CLOUDFRONT_URL: ${{ env.CLOUDFRONT_URL_FROM_GIT }}
-      - name: running python
-        run :
-          python testing_terrgr_ver.py
+
