--- a/.github/workflows/download_file.yaml
+++ b/.github/workflows/download_file.yaml
@@ -4,7 +4,6 @@ on:
 jobs:
   run_python_script:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -16,14 +15,12 @@ jobs:
           python-version: 3
       - name: install
         run: |
-          python3 testing_terrgr_ver.py
           pip install boto3 requests json os
-          
         env:
           S3_BUCKET_NAME: ${{ env.S3_BUCKET_NAME_FROM_GIT }}
           CLOUDFRONT_URL: ${{ env.CLOUDFRONT_URL_FROM_GIT }}
       - name: running python
-        run :
+        run: |
           python testing_terrgr_ver.py
 
                 
