--- a/.github/workflows/download_file.yaml
+++ b/.github/workflows/download_file.yaml
@@ -1,6 +1,10 @@
 name: Download the file from CloudFront
+
 on:
-  - push 
+  push:
+    branches:
+      - main
+
 jobs:
   run_python_script:
     runs-on: ubuntu-latest
@@ -10,17 +14,15 @@ jobs:
         with:
           working-directory: ./
       - name: Run Python Script
-      - uses: actions/setup-python@v2
+        uses: actions/setup-python@v2
         with:
           python-version: 3
-      - name: install
+      - name: Install dependencies
         run: |
-          pip install boto3 requests json os
+          pip install boto3 requests
         env:
           S3_BUCKET_NAME: ${{ env.S3_BUCKET_NAME_FROM_GIT }}
           CLOUDFRONT_URL: ${{ env.CLOUDFRONT_URL_FROM_GIT }}
-      - name: running python
+      - name: Run Python Script
         run: |
           python testing_terrgr_ver.py
-
-                
