--- a/.github/workflows/testing_vars.yml
+++ b/.github/workflows/testing_vars.yml
@@ -25,7 +25,7 @@ jobs:
         run: terraform init
         working-directory: ./test
       - name: Terraform Init
-        run: terraform apply
+        run: terraform apply -auto-approve
         working-directory: ./test
       
 
