--- a/.github/workflows/testing_vars.yml
+++ b/.github/workflows/testing_vars.yml
@@ -35,7 +35,7 @@ jobs:
         id: set_outputs
         working-directory:  ${{ env.folder }}
         run: |
-            terraform output aws_s3_bucket_name >> $S3_BUCKET_NAME
+            echo "$(terraform output aws_s3_bucket_name)" >> $S3_BUCKET_NAME
       - name: Run Python Script
         run: |
           python3 ${{ env.folder }}/test.py
