--- a/.github/workflows/testing_vars.yml
+++ b/.github/workflows/testing_vars.yml
@@ -35,7 +35,8 @@ jobs:
         id: set_outputs
         working-directory:  ${{ env.folder }}
         run: |
-            echo "$(terraform output aws_s3_bucket_name)" >> $S3_BUCKET_NAME
+            S3_BUCKET_NAME=$(terraform output -raw aws_s3_bucket_name)
+            echo "${S3_BUCKET_NAME}" >> $GITHUB_ENV
       - name: Run Python Script
         run: |
           python3 ${{ env.folder }}/test.py
