--- a/.github/workflows/testing_vars.yml
+++ b/.github/workflows/testing_vars.yml
@@ -5,7 +5,6 @@ on:
       - main
 env:
   folder: ./test
-  S3_BUCKET_NAME: ''
   
 jobs:
   deploy:
@@ -35,8 +34,7 @@ jobs:
         id: set_outputs
         working-directory:  ${{ env.folder }}
         run: |
-            S3_BUCKET_NAME=$(terraform output aws_s3_bucket_name)
-            echo "S3_BUCKET_NAME=${S3_BUCKET_NAME}" >> $GITHUB_ENV
+            echo "S3_BUCKET_NAME=$(terraform output aws_s3_bucket_name)" >> $GITHUB_ENV
       - name: Run Python Script
         run: |
           python3 ${{ env.folder }}/test.py
