--- a/.github/workflows/testing_vars.yml
+++ b/.github/workflows/testing_vars.yml
@@ -34,7 +34,7 @@ jobs:
         id: set_outputs
         working-directory:  ${{ env.folder }}
         run: |
-            echo "S3_BUCKET_NAME=$(terraform output aws_s3_bucket_name)" >> $GITHUB_ENV
+            echo "S3_BUCKET_NAME=$(terraform output aws_s3_bucket_name | tr -d '"')"  >> $GITHUB_ENV
       - name: Run Python Script
         run: |
           python3 ${{ env.folder }}/test.py
