--- a/.github/workflows/testing_vars.yml
+++ b/.github/workflows/testing_vars.yml
@@ -30,11 +30,13 @@ jobs:
         working-directory: ${{ env.folder }}
       
 
-      - name: Save Terraform outputs
-        id: set_outputs
-        working-directory:  ${{ env.folder }}
-        run: |
-            echo "S3_BUCKET_NAME=$(terraform output aws_s3_bucket_name | tr -d '"')"  >> $GITHUB_ENV
+      - name: setup python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+          working-directory:  ${{ env.folder }}
+          env:
+               echo "S3_BUCKET_NAME=$(terraform output aws_s3_bucket_name | tr -d '"')" >> GITHUB_ENV
       - name: Run Python Script
         run: |
           python3 ${{ env.folder }}/test.py
