--- a/.github/workflows/testing_vars.yml
+++ b/.github/workflows/testing_vars.yml
@@ -36,7 +36,7 @@ jobs:
           python-version: '3.10'
           working-directory:  ${{ env.folder }}
           env:
-               echo "S3_BUCKET_NAME=$(terraform output aws_s3_bucket_name | tr -d '"')" >> GITHUB_ENV
+               echo "S3_BUCKET_NAME=$(terraform output aws_s3_bucket_name | tr -d '"')" >> $GITHUB_ENV
       - name: Run Python Script
         run: |
           python3 ${{ env.folder }}/test.py
