--- a/.github/workflows/testing_vars.yml
+++ b/.github/workflows/testing_vars.yml
@@ -5,6 +5,7 @@ on:
       - main
 env:
   folder: ./test
+  S3_BUCKET_NAME: ''
   
 jobs:
   deploy:
@@ -36,7 +37,7 @@ jobs:
           python-version: '3.10'
           working-directory:  ${{ env.folder }}
           env:
-               echo "S3_BUCKET_NAME=$(terraform output aws_s3_bucket_name | tr -d '"')" >> $GITHUB_ENV
+               S3_BUCKET_NAME=$(terraform output aws_s3_bucket_name | tr -d '"')
       - name: Read exported variable
         run: |
           echo "${{ env.S3_BUCKET_NAME }}"
