--- a/.github/workflows/testing_vars.yml
+++ b/.github/workflows/testing_vars.yml
@@ -37,10 +37,10 @@ jobs:
           python-version: '3.10'
           working-directory:  ${{ env.folder }}
           env:
-               S3_BUCKET_NAME=$(terraform output aws_s3_bucket_name | tr -d '"')
+               echo "S3_BUCKET_NAME=$(terraform output aws_s3_bucket_name | tr -d '"')" >> "$GITHUB_ENV"
       - name: Read exported variable
         run: |
-          echo "${{ env.S3_BUCKET_NAME }}"
+          echo "$S3_BUCKET_NAME"
       - name: Run Python Script
         run: |
           python3 ${{ env.folder }}/test.py
