--- a/.github/workflows/testing_vars.yml
+++ b/.github/workflows/testing_vars.yml
@@ -30,17 +30,19 @@ jobs:
         run: terraform apply -auto-approve
         working-directory: ${{ env.folder }}
       
-
+      - name: save Terraform outputs
+        working-directory:  ${{ env.folder }}
+        run:
+               echo "S3_BUCKET_NAME=$(terraform output aws_s3_bucket_name | tr -d '"')" >> $GITHUB_ENV
+          
       - name: setup python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
           working-directory:  ${{ env.folder }}
-          run:
-               echo "S3_BUCKET_NAME=$(terraform output aws_s3_bucket_name | tr -d '"')" >> $GITHUB_ENV
       - name: Read exported variable
         run: |
-          echo $S3_BUCKET_NAME
+          echo ${{ env.S3_BUCKET_NAME }}
       - name: Run Python Script
         run: |
           python3 ${{ env.folder }}/test.py
