--- a/.github/workflows/testing_vars.yml
+++ b/.github/workflows/testing_vars.yml
@@ -31,8 +31,7 @@ jobs:
         working-directory: ${{ env.folder }}
       
       - name: save Terraform outputs
-        run: |
-            echo "S3_BUCKET_NAME=$(terraform output aws_s3_bucket_name | tr -d '"')" >> $GITHUB_ENV
+        run: echo "S3_BUCKET_NAME=$(terraform output aws_s3_bucket_name | tr -d '"')" >> $GITHUB_ENV
           
       - name: setup python
         uses: actions/setup-python@v4
