--- a/.github/workflows/testing_vars.yml
+++ b/.github/workflows/testing_vars.yml
@@ -31,10 +31,11 @@ jobs:
 
       - name: Terraform santiy check
         run: terraform output aws_s3_bucket_name | tr -d '"'
+        working-directory: ${{ env.folder }
         
-      - name: save Terraform outputs
-        run: |
-         echo "S3_BUCKET_NAME=$(terraform output aws_s3_bucket_name | tr -d '"')" >> $GITHUB_ENV
+      - name: save Terraform output
+        run: echo "S3_BUCKET_NAME=$(terraform output aws_s3_bucket_name | tr -d '"')" >> $GITHUB_ENV
+        working-directory: ${{ env.folder }}
           
       - name: setup python
         uses: actions/setup-python@v4
