--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,10 @@ jobs:
       - name: Read exported variable
         run: export TEST="Hello world"
       - name: Run Python Script
-        run: echo "${TEST}"
+        run: |
+           echo $TEST
+           export TEST2="Hello Asa"
+           echo $TEST2
+      
         
         
