--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
         run: echo "Hello world" >> hello.txt
       - name: Run Python Script
         run: |
-           export TEST=${cat hello.txt}
+           export TEST=$(cat hello.txt)
            echo $TEST
     
         
