--- a/.github/workflows/deployAWS.yml
+++ b/.github/workflows/deployAWS.yml
@@ -59,4 +59,5 @@ jobs:
         run: |
           export S3_BUCKET_NAME=$(cat s3_bucket.txt)
           export CLOUDFRONT_URL=$(cat cloudfront_id.txt)
+          pip install requests boto3 
           python3 testing_terrgr_ver.py
