--- a/.github/workflows/deployAWS.yml
+++ b/.github/workflows/deployAWS.yml
@@ -45,9 +45,8 @@ jobs:
       - name: Save Terragrunt outputs
         run: |
             echo "$(terragrunt output aws_s3_bucket | tr -d '"')" >> s3_bucket.txt
-            echo "$(terragrunt output aws_cloudfront_distribution_URL | tr -d '"')" >> cloudfront_id.txt
-
-        working-directory: ${{ env.folder }}
+            echo "$(terragrunt output -raw aws_cloudfront_distribution_URL | tr -d '"')" >> cloudfront_id.txt
+            working-directory: ${{ env.folder }}
 
       - name: setup python
         uses: actions/setup-python@v4
