--- a/.github/workflows/deployAWS.yml
+++ b/.github/workflows/deployAWS.yml
@@ -39,7 +39,7 @@ jobs:
           INPUT_POST_EXEC_1: |
             echo "$(terragrunt output aws_s3_bucket | tr -d '"')" > s3_bucket.txt
           INPUT_POST_EXEC_2: |
-            echo "$(terragrunt output -raw aws_cloudfront_distribution_URL | tr -d '"')" > /cloudfront_id.txt
+            echo "$(terragrunt output -raw aws_cloudfront_distribution_URL | tr -d '"')" > cloudfront_id.txt
           INPUT_POST_EXEC_3: |
             cat s3_bucket.txt
           INPUT_POST_EXEC_4: |
