--- a/.github/workflows/deployAWS.yml
+++ b/.github/workflows/deployAWS.yml
@@ -7,7 +7,6 @@ on:
 env:
   tf_version: '1.5.7'
   tg_version: '0.50.8'
-  live_dir: 'prod/eu-west-1/cloudfront'
   
 jobs:
   deploy:
@@ -28,40 +27,57 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY_V2 }}
           aws-region: eu-west-1
 
-      - name: Install and plan terragrunt
+      - name: plan s3 - terragrunt
         id: plan
         uses: gruntwork-io/terragrunt-action@v2
         with:
           tf_version: ${{ env.tf_version }}
           tg_version: ${{ env.tg_version }}
-          tg_dir: ${{ env.live_dir }}
+          tg_dir: live/prod/eu-west-1/s3
           tg_command: 'plan'
         if: github.ref == 'refs/heads/main'
 
-      - name: Deploy
+      - name: apply s3 - terragrunt
         uses: gruntwork-io/terragrunt-action@v2
         env: 
           INPUT_POST_EXEC_1: |
             echo "$(terragrunt output aws_s3_bucket | tr -d '"')" > s3_bucket.txt
-          INPUT_POST_EXEC_2: |
-            echo "$(terragrunt output -raw aws_cloudfront_distribution_URL | tr -d '"')" > cloudfront_id.txt
-          INPUT_POST_EXEC_3: |
-            cat s3_bucket.txt
-          INPUT_POST_EXEC_4: |
-            pwd
-          INPUT_POST_EXEC_5: |
-            ls -lsa
         with:
           terraform_wrapper: false
           tf_version: ${{ env.tf_version }}
           tg_version: ${{ env.tg_version }}
-          tg_dir: ${{ env.live_dir }}
+          tg_dir: live/prod/eu-west-1/s3
+          tg_command: 'apply'
+
+        - name: plan cloudfront - terragrunt
+        id: plan
+        uses: gruntwork-io/terragrunt-action@v2
+        with:
+          tf_version: ${{ env.tf_version }}
+          tg_version: ${{ env.tg_version }}
+          tg_dir: live/prod/eu-west-1/cloudfront
+          tg_command: 'plan'
+        if: github.ref == 'refs/heads/main'
+
+      - name: apply cloudfront - terragrunt
+        uses: gruntwork-io/terragrunt-action@v2
+        env: 
+          INPUT_POST_EXEC_1: |
+            echo "$(terragrunt output -raw aws_cloudfront_distribution_URL | tr -d '"')" > cloudfront_id.txt
+        with:
+          terraform_wrapper: false
+          tf_version: ${{ env.tf_version }}
+          tg_version: ${{ env.tg_version }}
+          tg_dir: live/prod/eu-west-1/cloudfront
           tg_command: 'apply'
 
       - name: Run Python Script
         run: |
-          pwd
-          export S3_BUCKET_NAME=$(cat ${{ env.live_dir }}/s3_bucket.txt)
-          export CLOUDFRONT_URL=$(cat ${{ env.live_dir }}/cloudfront_id.txt)
+          export S3_BUCKET_NAME=$(cat live/prod/eu-west-1/s3/s3_bucket.txt)
+          export CLOUDFRONT_URL=$(cat live/prod/eu-west-1/cloudfront/cloudfront_id.txt)
           pip install requests boto3 
-          python3 testing_terrgr_ver.py
+          python3 app/main.py
+
+
+
+ 
